apps/online-boutique/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: onlineboutique-route
  namespace: onlineboutique
spec:
  parentRefs:
    - name: meu-gateway-dualstack
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: default
  hostnames:
    - "onlineboutique.aesthar.com.br"
  rules:
    - backendRefs:
      - name: frontend
        group: ''
        kind: Service
        port: 80
        weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
